--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Jasmine Spec Runner v3.1.0</title>
+  <title>Joanne Kelly</title>
 
   <link rel="shortcut icon" type="image/png" href="lib/jasmine-3.1.0/jasmine_favicon.png">
   <link rel="stylesheet" href="lib/jasmine-3.1.0/jasmine.css">
