--- a/about.html
+++ b/about.html
@@ -54,9 +54,8 @@ window.onclick = function(event) {
 </script>
 
 <article>
-<img src="./src/images/joanne-final.jpg">
 <h3>Kia Ora! Welcome to my about me page.</h3> 
-<pre>I am an apprentice software developer at WeCanCodeIt in Columbus, Ohio.
+<pre>I'm an apprentice software developer at WeCanCodeIt in Columbus OH.
 Before this I played with ponies and cut grass and ran around the 
 yard playing with butterflies in lala land.
 
@@ -65,7 +64,7 @@ Email: joanne@bridleplates.com
 </pre>
 </article>
 <br>
-<img src="./src/images/Junior.jpg"><img src="./src/images/Sunny.jpg">
+<img src="./src/images/Junior.jpg"><img src="./src/images/joanne-final.jpg">
 </body><img src="./src/images/JuJu.jpg">
 <br><br><br>
 <footer>
