--- a/projects.html
+++ b/projects.html
@@ -52,18 +52,15 @@ window.onclick = function(event) {
       <a href="https://github.com/nzequestrian/virtual-pet-shelter" target="_blank">
       <img src="./src/images/VirtualPetShelter.jpg" alt="Virtual Pet"></a>
       <a href="https://github.com/nzequestrian/virtual-pets-amok" target="_blank"><img src="./src/images/VirtualPetsAmok.jpg" alt="Virtual Pet"></a>
-<h5><pre>Virtual Pet               Virtual Pet Shelter            Virtual Pets Amok</pre></h5>
 </div>
 
 <div class="flex-container">
-      <div><h2>Virtual Pet - <em>Command Line (UI)- Java - Junit - OOP</em></h2><article>My Virtual Pet application allows a user to create and take care of their own pet. Your pet can be fed, watered, and played with, as you nurture your pet you will grow a strong bond with him..</article></div>
-      <div><h2>Virtual Pet Shelter - <em>Maps - Overloaded Constructors </em></h2><article>So, you have some experience under your belt in the care and feeding of a virtual pet. It’s time to share that with the community! Time to volunteer!</article></div>
-      <div><h2>Virtual Pets Amok - <em>Getters - Polymorphism - Inheritance </em></h2><article>In additon to feeding, watering, playing with, adopting and dropping off pets. There are ways to track cage cleanliness for organic dogs, oil/maintenance level for robotic animals and to see how dirty the cats litterbox is getting. Dont forget to take the dogs on a walk once in a while.</article></div>
+      <div><h2>Virtual Pet - <em>Command Line (UI)- Java - Junit - OOP</em></h2><article>My Virtual Pet application allows a user to create and take care of their own pet. </article></div>
+      <div><h2>Virtual Pet Shelter - <em>Maps - Overloaded Constructors </em></h2><article>It’s time to share that with the community! Time to volunteer!</article></div>
+      <div><h2>Virtual Pets Amok - <em>Getters - Polymorphism - Inheritance </em></h2><article>We have robo pets too! </article></div>
 </div>
 
 </body>
-    <footer>
-       <div>&copy;2018 bridleplates.com  -  <em>May the horse be with you</em></div> 
-    </footer>
+   
 </html>
 
