--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
  <body
  	<div class="wrapper">
     <div id="topbar">
-    <div id="logo"> “A great horse will change your life. <br>The truly special ones define it…” <em>~ Author Unknown</em></div>
+    <div id="logo"> “A great horse will change your life. <br>The truly special ones define it...” <em>~  Author Unknown</em></div>
     
  
 
@@ -55,15 +55,17 @@ window.onclick = function(event) {
 
 <article>
 <h3>Kia Ora! Welcome to my about me page.</h3> 
-<pre>I'm an apprentice software developer at WeCanCodeIt in Columbus OH.
-Before this I played with ponies and cut grass and ran around the 
-yard playing with butterflies in lala land.
 
-Please contact me if you are a fairy godmother. 
-Email: joanne@bridleplates.com
+<p>I am a Software Developer Apprentice, engaged in a full-time, 5-star-rated coding boot camp, learning agile full-stack software development from expert instructors and intensive hands-on projects. Planned, designed, and developed professionally programmed <br> applications in collaborative team-based and independent settings, demonstrating the <br> 
+proficiency to learn Software Development Certificate. <br> <br> 
+Java  •  Spring  •  Hibernate  •  TDD  •   JavaScript  •  jQuery  •  HTML5  •  CSS3 <br> 
+•  Flexbox  •  MVC  •  Git •  Responsive/Mobile-First Design   •  Structured Query Language (SQL) <br>  
+•  Transactional Databases / MSSQL  •  Object Oriented Programming </p>
+
+Please contact me via email @ joanne@bridleplates.com
 </pre>
 </article>
-<br>
+<br> <br><br> 
 <img src="./src/images/Junior.jpg"><img src="./src/images/joanne-final.jpg">
 </body><img src="./src/images/JuJu.jpg">
 <br><br><br>
